--- a/.env.example
+++ b/.env.example
@@ -31,11 +31,11 @@ VITE_WEATHER_KEY = ""
 # 建站日期
 ## 若不需要，请设为空即可
 ## 请按照 YYYY-MM-DD 格式填写或者仅填写年份 YYYY
-VITE_SITE_START = "2020-10-24"
+VITE_SITE_START = "2023-11-26"
 
 # ICP 备案号
 ## 若不需要，请设为空即可
-VITE_SITE_ICP = <a href="https://icp.gov.moe/?keyword=20240246" target="_blank">萌ICP备20240246号</a>
+VITE_SITE_ICP = 萌ICP备20240246号
 
 # 歌曲 API 地址
 ## 请参照 https://github.com/xizeyoupan/Meting-API#deno-deploy 进行 API 服务部署
