--- a/.env.example
+++ b/.env.example
@@ -35,7 +35,7 @@ VITE_SITE_START = "2023-11-26"
 
 # ICP 备案号
 ## 若不需要，请设为空即可
-VITE_SITE_ICP = 萌ICP备20240246号
+VITE_SITE_ICP = 渝ICP备2024021481号-1
 
 # 歌曲 API 地址
 ## 请参照 https://github.com/xizeyoupan/Meting-API#deno-deploy 进行 API 服务部署
